platform/phase-5-security/kyverno-policies/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-resources

spec:
  validationFailureAction: Audit
  background: true

  rules:
    - name: require-cpu-memory

      match:
        any:
          - resources:
              kinds:
                - Deployment

      validate:
        message: "CPU and Memory requests are required"

        pattern:
          spec:
            template:
              spec:
                containers:
                  - resources:
                      requests:
                        cpu: "?*"
                        memory: "?*"
